--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
           content="width=device-width,  
                    initial-scale=1.0"> 
     <title>Pomodoro Timer</title> 
-    <link rel="stylesheet" 
-          href="style.css"> 
-    <script src= 
-'https://kit.fontawesome.com/a076d05399.js'
-            crossorigin='anonymous'> 
-      </script> 
+    <link rel="stylesheet" href="style.css"> 
 </head> 
   
 <body> 
